Project retail_dw {
  database_type: "PostgreSQL"
}

Table dim_date {
  date_key int [pk]
  date date
  day_name varchar
  week_of_year int
  month int
  month_name varchar
  quarter int
  year int
  fiscal_month int
  fiscal_quarter int
  fiscal_year int
  is_weekend boolean
}

Table dim_store {
  store_key bigint [pk]
  store_id varchar [unique]
  name varchar
  region varchar
  format varchar
  opened_date date
  closed_date date
}

Table dim_product {
  product_key bigint [pk]
  sku varchar
  upc varchar
  brand varchar
  category varchar
  subcategory varchar
  size varchar
  cost numeric
  list_price numeric
  status varchar
  effective_from timestamp
  effective_to timestamp
  is_current boolean
  Indexes { (sku, is_current) }
}

Table dim_customer {
  customer_key bigint [pk]
  customer_id varchar
  segment varchar
  loyalty_tier varchar
  effective_from timestamp
  effective_to timestamp
  is_current boolean
  Indexes { (customer_id, is_current) }
}

Table dim_promo {
  promo_key bigint [pk]
  promo_id varchar
  name varchar
  type varchar
  benefit_type varchar
  benefit_value numeric
  min_threshold numeric
  max_uses_per_cust int
  start_ts timestamp
  end_ts timestamp
  channels_allowed varchar
  inclusion_rule_json json
  exclusion_rule_json json
  created_by varchar
  created_ts timestamp
  status varchar
  effective_from timestamp
  effective_to timestamp
  is_current boolean
  Indexes { (promo_id, is_current) }
}

Table bridge_promo_product {
  promo_key bigint
  product_key bigint
  rule_type varchar
  Indexes { (promo_key, product_key, rule_type) [pk] }
}

Table fact_sales {
  order_id varchar
  order_line_id varchar
  date_key int
  store_key bigint
  product_key bigint
  customer_key bigint
  promo_key bigint
  qty numeric
  gross_sales numeric
  discount_amt numeric
  net_sales numeric
  channel varchar
  Indexes { (order_id, order_line_id) [pk] }
}

Table fact_promo_redemption {
  basket_id varchar
  date_key int
  store_key bigint
  product_key bigint
  customer_key bigint
  promo_key bigint
  redemption_qty numeric
  discount_amt numeric
  Indexes { (basket_id, promo_key, product_key) [pk] }
}

Table fact_inventory {
  date_key int
  store_key bigint
  product_key bigint
  on_hand numeric
  on_order numeric
  cost numeric
  Indexes { (date_key, store_key, product_key) [pk] }
}

Ref: fact_sales.date_key        > dim_date.date_key
Ref: fact_sales.store_key       > dim_store.store_key
Ref: fact_sales.product_key     > dim_product.product_key
Ref: fact_sales.customer_key    > dim_customer.customer_key
Ref: fact_sales.promo_key       > dim_promo.promo_key

Ref: fact_promo_redemption.date_key     > dim_date.date_key
Ref: fact_promo_redemption.store_key    > dim_store.store_key
Ref: fact_promo_redemption.product_key  > dim_product.product_key
Ref: fact_promo_redemption.customer_key > dim_customer.customer_key
Ref: fact_promo_redemption.promo_key    > dim_promo.promo_key

Ref: fact_inventory.date_key    > dim_date.date_key
Ref: fact_inventory.store_key   > dim_store.store_key
Ref: fact_inventory.product_key > dim_product.product_key

Ref: bridge_promo_product.promo_key   > dim_promo.promo_key
Ref: bridge_promo_product.product_key > dim_product.product_key
